// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Object metadata update should fail when labelIdentifier is a UUID field (reserved for system objects) 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "agent": [],
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "fieldMetadata": [],
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_OBJECT_INPUT",
                "message": "labelIdentifierFieldMetadataId validation failed: field type uuid is reserved for system object metadata",
                "userFriendlyMessage": "Field cannot be used as label identifier",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "namePlural": "whatevers",
              "nameSingular": "whatever",
            },
            "status": "fail",
            "type": "update_object",
          },
        ],
        "role": [],
        "roleTarget": [],
        "routeTrigger": [],
        "serverlessFunction": [],
        "view": [],
        "viewField": [
          {
            "errors": [
              {
                "code": "INVALID_VIEW_DATA",
                "message": "View field position cannot be lower than label identifier view field position",
                "userFriendlyMessage": "View field position cannot be lower than label identifier view field position",
              },
            ],
            "flatEntityMinimalInformation": {
              "fieldMetadataId": Any<String>,
              "id": Any<String>,
              "viewId": Any<String>,
            },
            "status": "fail",
            "type": "create_view_field",
          },
        ],
        "viewFilter": [],
        "viewGroup": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidAgent": 0,
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidFieldMetadata": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidRole": 0,
        "invalidRoleTarget": 0,
        "invalidRouteTrigger": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "invalidViewFilter": 0,
        "invalidViewGroup": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while updating object",
    "name": "GraphQLError",
  },
]
`;

exports[`Object metadata update should fail when labelIdentifier is not a TEXT or NAME field 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "agent": [],
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "fieldMetadata": [],
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_OBJECT_INPUT",
                "message": "labelIdentifierFieldMetadataId validation failed: field type not compatible",
                "userFriendlyMessage": "Field cannot be used as label identifier",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "namePlural": "whatevers",
              "nameSingular": "whatever",
            },
            "status": "fail",
            "type": "update_object",
          },
        ],
        "role": [],
        "roleTarget": [],
        "routeTrigger": [],
        "serverlessFunction": [],
        "view": [],
        "viewField": [
          {
            "errors": [
              {
                "code": "INVALID_VIEW_DATA",
                "message": "View field position cannot be lower than label identifier view field position",
                "userFriendlyMessage": "View field position cannot be lower than label identifier view field position",
              },
            ],
            "flatEntityMinimalInformation": {
              "fieldMetadataId": Any<String>,
              "id": Any<String>,
              "viewId": Any<String>,
            },
            "status": "fail",
            "type": "create_view_field",
          },
        ],
        "viewFilter": [],
        "viewGroup": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidAgent": 0,
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidFieldMetadata": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidRole": 0,
        "invalidRoleTarget": 0,
        "invalidRouteTrigger": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "invalidViewFilter": 0,
        "invalidViewGroup": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while updating object",
    "name": "GraphQLError",
  },
]
`;

exports[`Object metadata update should fail when labelIdentifier is not a known field metadata id 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "agent": [],
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "fieldMetadata": [],
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_OBJECT_INPUT",
                "message": "labelIdentifierFieldMetadataId validation failed: related field metadata not found",
                "userFriendlyMessage": "Field declared as label identifier not found",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "namePlural": "whatevers",
              "nameSingular": "whatever",
            },
            "status": "fail",
            "type": "update_object",
          },
        ],
        "role": [],
        "roleTarget": [],
        "routeTrigger": [],
        "serverlessFunction": [],
        "view": [],
        "viewField": [
          {
            "errors": [
              {
                "code": "INVALID_VIEW_DATA",
                "message": "Field metadata not found",
                "userFriendlyMessage": "Field metadata not found",
              },
              {
                "code": "INVALID_VIEW_DATA",
                "message": "View field position cannot be lower than label identifier view field position",
                "userFriendlyMessage": "View field position cannot be lower than label identifier view field position",
              },
            ],
            "flatEntityMinimalInformation": {
              "fieldMetadataId": Any<String>,
              "id": Any<String>,
              "viewId": Any<String>,
            },
            "status": "fail",
            "type": "create_view_field",
          },
        ],
        "viewFilter": [],
        "viewGroup": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidAgent": 0,
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidFieldMetadata": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidRole": 0,
        "invalidRoleTarget": 0,
        "invalidRouteTrigger": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "invalidViewFilter": 0,
        "invalidViewGroup": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while updating object",
    "name": "GraphQLError",
  },
]
`;

exports[`Object metadata update should fail when labelIdentifier is not a uuid 1`] = `
[
  {
    "extensions": {
      "code": "GRAPHQL_VALIDATION_FAILED",
      "http": {
        "status": 400,
      },
      "userFriendlyMessage": "An error occurred.",
      "value": "not-a-uuid",
    },
    "message": "Invalid UUID",
    "name": "ValidationError",
  },
]
`;

exports[`Object metadata update should fail when labelIdentifier is null 1`] = `
[
  {
    "extensions": {
      "code": "METADATA_VALIDATION_FAILED",
      "errors": {
        "agent": [],
        "cronTrigger": [],
        "databaseEventTrigger": [],
        "fieldMetadata": [],
        "index": [],
        "objectMetadata": [
          {
            "errors": [
              {
                "code": "INVALID_OBJECT_INPUT",
                "message": "labelIdentifierFieldMetadataId cannot be null",
                "userFriendlyMessage": "Field label identifier is required",
              },
            ],
            "flatEntityMinimalInformation": {
              "id": Any<String>,
              "namePlural": "whatevers",
              "nameSingular": "whatever",
            },
            "status": "fail",
            "type": "update_object",
          },
        ],
        "role": [],
        "roleTarget": [],
        "routeTrigger": [],
        "serverlessFunction": [],
        "view": [],
        "viewField": [],
        "viewFilter": [],
        "viewGroup": [],
      },
      "message": "Validation failed for 0 object(s) and 0 field(s)",
      "summary": {
        "invalidAgent": 0,
        "invalidCronTrigger": 0,
        "invalidDatabaseEventTrigger": 0,
        "invalidFieldMetadata": 0,
        "invalidIndex": 0,
        "invalidObjectMetadata": 0,
        "invalidRole": 0,
        "invalidRoleTarget": 0,
        "invalidRouteTrigger": 0,
        "invalidServerlessFunction": 0,
        "invalidView": 0,
        "invalidViewField": 0,
        "invalidViewFilter": 0,
        "invalidViewGroup": 0,
        "totalErrors": 0,
      },
      "userFriendlyMessage": "Validation failed for 0 object(s) and 0 field(s)",
    },
    "message": "Multiple validation errors occurred while updating object",
    "name": "GraphQLError",
  },
]
`;
